# 2026-personal-expertfinder

./: .gitignore  build_map.py  cleanup_non_academics.py  db.py  embed_profiles.py  extract_profiles.py  gemini_extract.py  harvest_urls.py  pyproject.toml  search.ipynb
docs/: index.html
docs/plans/: 2026-02-16-expertfinder-design.md  2026-02-16-expertfinder-implementation.md
scrapers/: queens.py  utils.py  waterloo.py
tests/: test_db.py  test_embed.py  test_gemini_extract.py  test_scraper_utils.py
